--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,9 @@
     "default_popup": "popup.html"
   },
   "icons": {
-    "128": "icon-128.png"
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
